完成项圈窗口和铃铛